# password_manager

./: .env  Cargo.toml
client/: package.json  pnpm-lock.yaml
client/src/: app.css  config.ts
client/src-tauri/: tauri.conf.json
client/src/routes/: +layout.svelte  +page.svelte
desktop_client/: package.json  pnpm-lock.yaml  tailwind.config.cjs
desktop_client/src-tauri/: Cargo.toml  tauri.conf.json
migration/src/: lib.rs  m20230311_082540_create_user_table.rs  m20230311_205052_add_timestamps_to_user_table.rs  m20230323_125403_create_passwords_table.rs
server/: .env.example  Cargo.toml
server/migration/src/: lib.rs  m20230311_082540_create_user_table.rs  m20230323_125403_create_passwords_table.rs  m20230422_195903_add_strength_to_passwords_table.rs
server/src/: api_error.rs  main.rs
server/src/database/: init.rs
server/src/dto/auth/: create_user.rs
server/src/dto/password/: create_password.rs
server/src/entities/: mod.rs  passwords.rs  prelude.rs  users.rs
server/src/middlewares/: extract_user.rs  mod.rs
server/src/routes/: auth.rs  password.rs
server/src/services/: auth.rs  password.rs  user.rs
src/: api_error.rs  main.rs
src/database/: init.rs
src/dto/: create_user.rs  login.rs
src/dto/auth/: create_user.rs
src/entities/: mod.rs  passwords.rs  prelude.rs  user.rs  users.rs
src/middlewares/: extract_user.rs
src/routes/: auth.rs  password.rs  user.rs
src/services/: mod.rs  password.rs  user.rs
src/validators/: unique.rs
thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
(+7 files in other folders)
