[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
listenfd = "1.0.1"
log = "0.4.17"
sea-orm = { version = "0.11.1", features = [
    "debug-print",
    "runtime-actix-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-time",
    "macros",
] }
serde = "1.0.154"
serde_json = "1.0.94"
uuid = "1.3.0"
migration = { path = "migration" }
