[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
futures = "0.3.26"
listenfd = "1.0.1"
log = "0.4.17"
sea-orm = { version = "0.11.1", features = [
    "debug-print",
    "runtime-actix-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-time",
    "macros",
] }
serde = "1.0.154"
serde_json = "1.0.94"
uuid = {version = "1.3.0", features = ["v4", "serde"]}
migration = { path = "migration" }
dotenvy = "0.15.6"
validator = { version = "0.16.0", features = ["validator_derive", "derive"] }
bcrypt = "0.14.0"
jwt = "0.16.0"
hmac = "0.12.1"
chrono = {version = "0.4.23", features = ["serde"]}
sha2 = "0.10.6"
